# LexicalSyntacticAnalyzer

./: CMakeLists.txt  LICENSE  README.md  lexer.cpp  lexer.h  main.cpp  syntax.txt  test.txt  test1.txt  test2.txt  utilities.cpp
